<resources>
    <string name="app_name">Listplay</string>
    <!-- PlayListAdapter -->
    <string name="numeroVideosPlaylist">canciones</string>
    <!--PlayLists Fragment -->
    <string name="noPlayLists">No existen listas de reproducciones creadas</string>
    <!--Videos Fragment -->
    <string name="noVideos">No existen Videos actualmente</string>
    <!--AllVideos Fragment -->
    <string name="noAllVideos">No existen Videos actualmente</string>
    <!--NAVIGATION VIEW-->
    <string name="playlist_nav">Listas de reproducción</string>
    <string name="allsongs_nav">Todas las canciones</string>
    <string name="recientes_nav">Agregadas recientemente</string>
    <string name="artistas_nav">Artistas</string>
    <string name="settings_nav">Opciones</string>
    <!--Reproductor opciones-->
    <string name="editar_opc">Editar</string>
    <string name="añadir_opc">Añadir a Lista</string>
    <string name="eliminar_lista_opc">Eliminar de Lista</string>
    <string name="eliminar_opc">Eliminar</string>
    <string name="sleep_timer_opc">Temporizador</string>
    <!--Edit Dialog Fragment-->
    <string name="nombre_popup">Nombre</string>
    <string name="artista_popup">Artista</string>
    <string name="titulo_youtube_popup">Título Youtube</string>
    <string name="aceptar_popup">Aceptar</string>
    <string name="cancelar_popup">Cancelar</string>
    <string name="editar_popup">Editar</string>
    <!--Agregar a playlist Dialog Fragment-->
    <string name="nueva_playlist_addto">Nueva lista de reproducción</string>
    <string name="cancelar_addto">Cancelar</string>
    <string name="titulo_addto">Listas de reproducción</string>
    <string name="new_playlist_title_addto">Ingrese el nombre</string>
    <string name="exito_playlist_y_video_addto">Lista creada y video añadido</string>
    <string name="exito_video_addto">Video añadido a la lista</string>
    <string name="video_repetido_addto">Este video ya existe en la lista de reproducción</string>
    <string name="lista_repetida_addto">Ya existe una lista con ese nombre</string>
    <!--Eliminar video de playlist y/o base de datos dialog-->
    <string name="titulo_deletedia">Eliminar video</string>
    <string name="contenido_deletedia">¿Está seguro que desea eliminar este video de la Lista de Reproducción actual?</string>
    <string name="contenido_deletedb">¿Está seguro que desea eliminar este video de forma permanente?</string>
    <string name="aceptar_deletedia">Aceptar</string>
    <string name="cancelar_deletedia">Cancelar</string>
    <string name="exito_deletedia">Video eliminado</string>
    <!--Sleep timer dialog-->
    <string name="titulo1_sleep">Parar en: </string>
    <string name="titulo2_sleep"> minutos</string>
    <string name="titulo3_sleep">Desactivado</string>
    <string name="desactivar_sleep">Desactivar</string>
    <string name="cancelar_sleep">Cancelar</string>
    <string name="aceptar_sleep">Aceptar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>