<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/nombre_popup" />

        <EditText
            android:id="@+id/nombre_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/nombre" />

        <TextView
            android:id="@+id/artista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre_edit"
            android:text="@string/artista_popup" />

        <EditText
            android:id="@+id/artista_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/artista" />

        <TextView
            android:id="@+id/titulo_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/artista_edit"
            android:layout_marginBottom="10dp"
            android:text="@string/titulo_youtube_popup"/>

        <TextView
            android:id="@+id/titulo_youtube_contenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/titulo_youtube"
            android:textColor="@color/negro" />

        <TextView
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo_youtube_contenido"
            android:layout_toStartOf="@+id/aceptar"
            android:layout_toLeftOf="@id/aceptar"
            android:text="@string/cancelar_popup"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/colorAccent"
            android:text="@string/aceptar_popup"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>