<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <SeekBar
        android:id="@+id/tiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/desactivar"
        android:text="@string/desactivar_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiempo"
        android:textStyle="bold"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/cancelar"
        android:text="@string/cancelar_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/aceptar"
        android:layout_toLeftOf="@+id/aceptar"
        android:layout_toStartOf="@+id/aceptar"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/aceptar"
        android:text="@string/aceptar_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@+id/desactivar"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>